atualizando as imagens das demais sessões

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora est veniam nemo quis at saepe hic, magni vero, deleniti id vel mollitia facilis natus consequatur ipsa suscipit, odit error?
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
 
@@ -73,7 +73,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora est veniam nemo quis at saepe hic, magni vero, deleniti id vel mollitia facilis natus consequatur ipsa suscipit, odit error?
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
 
@@ -85,7 +85,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora est veniam nemo quis at saepe hic, magni vero, deleniti id vel mollitia facilis natus consequatur ipsa suscipit, odit error?
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
         </div>
     </section>
 
